[gd_scene load_steps=10 format=2]

[ext_resource path="res://Images/TextBox.png" type="Texture" id=1]
[ext_resource path="res://Font/Montserrat-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/BackgroundGamev1.png" type="Texture" id=3]
[ext_resource path="res://Images/Button.png" type="Texture" id=4]
[ext_resource path="res://Images/TestPicture.jpg" type="Texture" id=5]
[ext_resource path="res://TakingFakePicture.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 200
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[node name="TakingFakePicture" type="Node2D"]
script = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
margin_left = 244.46
margin_top = 473.045
margin_right = 284.46
margin_bottom = 513.045
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FakePictureScreen" type="Sprite" parent="Control"]
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Control/FakePictureScreen"]
visible = false
position = Vector2( -17.4398, -119.903 )
scale = Vector2( 0.204639, 0.218157 )
texture = ExtResource( 5 )

[node name="Control2" type="Control" parent="."]
margin_left = 89.4801
margin_top = 686.181
margin_right = 129.48
margin_bottom = 726.181

[node name="VolgendeScherm" type="TextureButton" parent="Control2"]
visible = false
margin_right = 297.0
margin_bottom = 96.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control2/VolgendeScherm"]
margin_left = 73.0754
margin_top = 21.4186
margin_right = 222.075
margin_bottom = 59.4186
custom_fonts/font = SubResource( 1 )
text = "Nu verder"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="BG" type="Sprite" parent="CanvasLayer"]
position = Vector2( 242.327, 403.231 )
texture = ExtResource( 3 )

[node name="Title" type="Sprite" parent="CanvasLayer"]
position = Vector2( 233.51, 90.4819 )
scale = Vector2( 0.222498, 0.222498 )
texture = ExtResource( 4 )

[node name="titleLabel" type="Label" parent="CanvasLayer/Title"]
margin_left = -734.849
margin_top = -128.42
margin_right = 771.151
margin_bottom = 116.58
custom_fonts/font = SubResource( 2 )
text = "Maak een Foto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaakFoto" type="TextureButton" parent="."]
margin_left = 74.7855
margin_top = 567.798
margin_right = 394.786
margin_bottom = 666.798
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MaakFoto"]
margin_left = 85.7196
margin_top = 26.9858
margin_right = 245.72
margin_bottom = 64.9858
custom_fonts/font = SubResource( 3 )
text = "Maak Foto"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control2/VolgendeScherm" to="." method="_on_VolgendeScherm_pressed"]
[connection signal="pressed" from="MaakFoto" to="." method="_on_MaakFoto_pressed"]
